Fix nota bene spacing

--- a/manon/variables/_form-fieldset.scss
+++ b/manon/variables/_form-fieldset.scss
@@ -17,3 +17,6 @@ $form-fieldset-label-margin: null !default;
 
 // Input
 $form-fieldset-input-margin: 0.5rem 0 1rem 0 !default;
+
+//Nota bee=ne
+$form-fieldset-nota-bene-padding-bottom: null !default;
