--- a/themes/icore-open/_index.scss
+++ b/themes/icore-open/_index.scss
@@ -273,6 +273,9 @@ and spacing sets */
   $form-combined-field-button-min-width: fit-content,
   $form-combined-field-button-justify-content: center,
 
+  //Nota bene
+  $form-fieldset-nota-bene-padding-bottom: 0.5rem,
+
   // focus
   $focus-outline: 2px solid,
   // Set to negative value to prevent from being cut off
